--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <!-- hot link to Google Maps JavaScript library -->
         <!-- https://developers.google.com/maps/documentation/javascript/tutorial -->
-        <script src="https://maps.googleapis.com/maps/api/js"></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCY7139Kx5j_SC1BL5q4HJMIzvFdei7FIs"></script>
 
         <!-- hot link to jQuery library -->
         <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
